# pubsub-api

./: .gitignore  README.md  client.py  pyproject.toml
src/proto/: buf.gen.yaml  pubsub.proto
src/pubsub_go/: api.go
src/pubsub_go/grpc/: pubsub.pb.go  pubsub.pb.gw.go  pubsub_grpc.pb.go
src/pubsub_python/: __init__.py  api.py
src/pubsub_python/grpc/: pubsub_grpc.py  pubsub_pb2.py  pubsub_pb2.pyi
